# Maestro

./: .gitignore  DefaultCoverArt.qrc  Maestro.pro  README.md  albummenu.cpp  albummenu.h  artistfiltermenu.h  artistmenu.cpp  artworkmenulistitem.cpp  artworkmenulistitem.h  artworkmenulistitem.ui  assets.qrc  basemenulistitem.cpp  controller.cpp  controller.h  controllermenu.cpp  controllermenu.h  database.cpp  database.h  datastruct.h  detailedmenulistitem.cpp  detailedmenulistitem.h  detailedmenulistitem.ui  main.cpp  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediaplayer.cpp  mediaplayer.h  menu.cpp  menu.h  menu.ui  menuentry.h  menulistitem.cpp  menulistitem.h  menulistitem.ui  musicmenu.cpp  musicmenu.h  (+19 more)
.github/workflows/: cmake-single-platform.yml  cmake.yml
include/: version.h.in
src/: CMakeLists.txt  assets.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: CMakeLists.txt  controller.cpp  controller.h  database.cpp  database.h  mediaplayer.cpp  mediaplayer.h  settings.cpp  settings.h
src/extras/: CMakeLists.txt  controllerlistwidget.cpp  controllerlistwidget.h  roundedprogressbarstyle.cpp  scrolltextedit.cpp  scrolltextedit.h
src/listitem/: CMakeLists.txt  artworkmenulistitem.cpp  artworkmenulistitem.h  artworkmenulistitem.ui  basemenulistitem.cpp  basemenulistitem.h  detailedmenulistitem.cpp  detailedmenulistitem.h  detailedmenulistitem.ui  menulistitem.cpp  menulistitem.h  menulistitem.ui  menuwithtogglelistitem.cpp  menuwithtogglelistitem.h  menuwithtogglelistitem.ui  settingssliderlistitem.cpp  settingssliderlistitem.h  twosidedlistitem.cpp  twosidedlistitem.h  twosidedlistitem.ui
src/model/: CMakeLists.txt  datastruct.h  menuentry.h  version.h
src/screen/: CMakeLists.txt  aboutmenu.cpp  aboutmenu.h  albummenu.cpp  albummenu.h  artistfiltermenu.cpp  artistfiltermenu.h  artistmenu.cpp  artistmenu.h  bluetoothmenu.cpp  bluetoothmenu.h  bluetoothpair.ui  bluetoothpairscreen.cpp  bluetoothpairscreen.h  bluetoothscanmenu.cpp  bluetoothscanmenu.h  controllermenu.cpp  controllermenu.h  mainmenu.cpp  mainmenu.h  menu.h  menu.ui  musicmenu.cpp  musicmenu.h  nowplaying.cpp  nowplaying.h  nowplaying.ui  reindexscreen.cpp  reindexscreen.ui  screen.cpp  screen.h  settingmenu.cpp  settingmenu.h  songsmenu.cpp  songsmenu.h  statusbar.cpp  statusbar.h  statusbar.ui
